@@ -1,5 +1,10 @@
 2016-10-30  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/Structuring.pm (nodes_tree): Use a hash reference
+	that is inside a variable for brevity.
+
+2016-10-30  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* tp/Texinfo/Convert/HTML.pm: Rename 'ids' hash to 'seen_ids'
 	and use 1 as its values instead of references to tree elements.
 
